# Medage-Player

./: .cache  .gitignore  CMakeLists.txt  CMakeLists.txt.user.7383bbe  CMakeLists.txt.user.abfec81  HOWTO.txt  Introduction and Overview.txt  LICENSE  Library.qml  MetaDataGetter.qml  PlayControl.qml  README.md  SettingsTab.qml  SongController.qml  SongQueue.cpp  SongQueue.h  SpotifyCredentials.py  SpotifyData.py  SpotifyTestingScript.py  SpotifyUser.py  YTMCredentials.py  YTMData.py  YTMUser.py  bulter_service.py  butler.py  fileio.cpp  fileio.h  main.cpp  main.qml  mainloop.py  pyPlayer.py  qml.qrc  requirements.txt  settings.cpp  settings.h  settings.txt  test.py  windowConnect.py
Playlists/: Library.txt
